<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screens_background" />

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_35ssp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/back_image"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/enter_your_e_mail_address_nwe_ll_send_you_a_e_mail_to_reset_your_password"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:hint="@string/email_id"
        app:hintTextColor="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email" />

</androidx.constraintlayout.widget.ConstraintLayout>