<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddressListActivity">

    <FrameLayout
        android:id="@+id/fl_header_bg"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screens_background" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_address_list"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_35ssp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_image"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/item_primary_color_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:text="@string/lbl_add_address"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_bg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address" />

    <TextView
        android:id="@+id/tv_no_address_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_address_found"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_address" />

</androidx.constraintlayout.widget.ConstraintLayout>