<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
    tools:context=".ui.activities.CartListActivity">

    <FrameLayout
        android:id="@+id/fl_header_bg"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screens_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_my_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_35ssp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_image"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart_items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_bg" />


    <TextView
        android:id="@+id/tv_no_cart_item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/no_cart_item_found"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_bg" />

    <LinearLayout
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_13sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_subtotal"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_shipping_charge"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_shipping_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_total_amount"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_bold"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/btn_lbl_checkout"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>